<?xml version="1.0"?>
<package>
  <name>simple_pub_sub</name>
  <version>0.0.1</version>
  <description>
    Attempting to learn Ros.
  </description>
  <license>BSD</license>

  <maintainer email="bengineeringelm@gmail.com">Ben Holleran</maintainer>

  <url type="repository">https://github.com/TheBengineer/ros-learning</url>
  <author>Ben Holleran</author>
  <author email="bengineeringelm@gmail.com">Ben Holleran</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>roscpp_tutorials</test_depend>
</package>